# Design-and-implementation-of-equipment-to-monitor-biological-indicators-in-health.

./: README.md  pedometers.ino  scan_I2C.ino  temperature.ino
Full Code AI/: README.md
Full Code AI/model development/: human_vital_signs_model.pth  label_encoder.pkl  model.info  model.json  model.onnx  model.py
Full Code AI/model inference/: CMakeLists.txt  dependencies.lock.esp32s3  partitions.csv  sdkconfig  sdkconfig.old
Full Code AI/model inference/main/: CMakeLists.txt  app_main.cpp  idf_component.yml
Full Code AI/model inference/main/models/: model.espdl
Full Code App/: README.md
Full Code IoT/: Full Code IoT.ino  README.md
Report 31-12/: Hiển.docx  Hoàng.docx  Ngân.docx  README.md  Thoa.docx
Report 5-8/: [Hiển]CODE PHẦN CỨNG.docx
baocao5-8/: [Hoàng] BÁO-CÁO-TIẾN-ĐỘ-PHÁT-TRIỂN-ỨNG-DỤNG-SỨC-KHỎE-lần-2.docx  [Ngân]_Deep-Sleep_Nguồn-cấp_Đợt2.docx  [Thoa] BÁO-CÁO-PHẦN-HIỂN-THỊ-MÀN-HÌNH-TFT-đợt-2.docx  [Ánh] Báo cáo về AI (NCKH).docx
img/: mattrang.h  phihanhgia.h
